--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ h4 {
 
 .menu {
     margin-top: 30px;
-    background-image: url("https://images.unsplash.com/photo-1571407970349-bc81e7e96d47?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60");
+    background-image: url("");
     padding: 0;
 }
 
