added changes in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ figure img {
     font-family: 'Shadows Into Light', cursive;
 }
 
-.karibu-img {
+.welcome-img {
     margin-top: 10px;
     margin-left: 80px;
     margin-bottom: 130px;
