added changes in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ figure img {
         background-color: rgba(0, 0, 0, 0.7);
     }
 
-    .karibu-img {
+    .welcome-img {
         margin-left: 20px;
         margin-bottom: 10px;
         height: 300px;
