--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 #spantext {
-    color: yellow;
+    color:pink;
 }
 
 .navi {
@@ -25,7 +25,7 @@ body {
 }
 
 .exc {
-    color: yellow;
+    color:palegreen;
 }
 
 #piz-pap {
@@ -246,20 +246,20 @@ figure img {
 }
 
 .txt-big {
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'Shadows Into Light', cursive;
 }
 
 .welcome-img {
-    margin-top: 10px;
-    margin-left: 80px;
-    margin-bottom: 130px;
+    margin-top: 12px;
+    margin-left: 82px;
+    margin-bottom: 135px;
     height: 400px;
     width: 400px;
 }
 
 .welcome {
-    padding-top: 30px;
+    padding-top: 40px;
 }
 
 .rads {
@@ -273,7 +273,7 @@ figure img {
 
 /* Collapse nav start*/
 .top-nav-collapse {
-    background-color: #3f51b5 !important;
+    background-color: red !important;
 }
 
 .navbar:not(.top-nav-collapse) {
@@ -295,17 +295,17 @@ figure img {
     }
 
     #push {
-        padding-top: 40%;
+        padding-top: 50%;
     }
 
     .welcome-txt {
-        margin-top: 50px;
+        margin-top: 60px;
     }
 
     .menu-overlay {
         width: 100%;
         height: inherit;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(139, 109, 27, 0.7);
     }
 
     .welcome-img {
