--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
     color:palegreen;
 }
 
-#piz-pap {
+#piz-IN {
     font-family: 'Shadows Into Light', cursive;
     font-size: 35px;
     font-weight: normal;
