added changes in styles.css file

--- a/css/styles.css
+++ b/css/styles.css
@@ -184,7 +184,7 @@ h4 {
 }
 
 #menu {
-    font-family: 'Love Ya Like A Sister', cursive;
+    font-family: 'monospace', cursive;
 }
 
 .menu-overlay {
